--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -45,7 +45,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     android:id="@+id/top_bar"
     android:layout_width="fill_parent"
     android:layout_height="80dp"
-    android:background="@color/black">
+    android:background="@color/river_blue">
     <ImageView
       android:id="@+id/robotIcon"
       android:layout_width="40dp"
@@ -57,14 +57,15 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
     <TextView
       android:id="@+id/textDeviceName"
-      android:layout_toRightOf="@id/robotIcon"
-      android:layout_toEndOf="@id/robotIcon"
-      android:layout_width="wrap_content"
+        android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:textColor="@color/white"
+      android:textColor="@color/black"
       android:padding="8dp"
       android:textSize="16sp"
-      android:textStyle="bold"/>
+      android:textStyle="bold"
+        android:layout_alignTop="@+id/robotIcon"
+        android:layout_toRightOf="@+id/robotIcon"
+        android:layout_toEndOf="@+id/robotIcon" />
 
     <ImageButton
       android:id="@+id/menu_buttons"
@@ -73,7 +74,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/icon_menu"
-      android:background="@color/black"
+      android:background="@color/river_blue"
       android:padding="15dp"
       android:adjustViewBounds="true"
       android:layout_alignParentRight="true"
@@ -82,11 +83,28 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_centerHorizontal="true"
       android:layout_margin="10dp"/>
 
-  </RelativeLayout>
-  <!-- end of black bar -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Thunderbots RC"
+        android:id="@+id/textView"
+        android:layout_alignBottom="@+id/robotIcon"
+        android:layout_alignLeft="@+id/textDeviceName"
+        android:layout_alignStart="@+id/textDeviceName"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
 
-  <include layout="@layout/header"
-           android:id="@+id/included_header"/>
+  </RelativeLayout>
+  <!-- end of blue bar -->
+
+    <include layout="@layout/header"
+           android:id="@+id/included_header" />
+  <View
+      android:id="@+id/SplitLine_hor1"
+      android:layout_width="match_parent"
+      android:layout_height= "2dp"
+      android:background="#d8d8d8" />
 
   <RelativeLayout
     android:id="@+id/RelativeLayout"
@@ -96,7 +114,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:paddingTop="@dimen/activity_vertical_margin"
+      android:background="@color/clouds">
 
     <TextView
       android:id="@+id/textWifiDirectStatus"
@@ -123,7 +142,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textOpMode"
-      android:textColor="#990000"
+      android:textColor="#e74c3c"
       android:textStyle="bold"
       android:minLines="2"
       android:maxLines="4"
