--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -59,13 +59,12 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:id="@+id/textDeviceName"
         android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:textColor="@color/black"
+        android:textColor="@color/white"
       android:padding="8dp"
       android:textSize="16sp"
       android:textStyle="bold"
         android:layout_alignTop="@+id/robotIcon"
-        android:layout_toRightOf="@+id/robotIcon"
-        android:layout_toEndOf="@+id/robotIcon" />
+        android:layout_toRightOf="@+id/robotIcon" />
 
     <ImageButton
       android:id="@+id/menu_buttons"
@@ -90,9 +89,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         android:text="Thunderbots RC"
         android:id="@+id/textView"
         android:layout_alignBottom="@+id/robotIcon"
-        android:layout_alignLeft="@+id/textDeviceName"
-        android:layout_alignStart="@+id/textDeviceName"
-        android:textColor="@color/black"
+        android:layout_toRightOf="@+id/robotIcon"
+        android:textColor="@color/white"
         android:textSize="16sp" />
 
   </RelativeLayout>
